# MindFlow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROMPT_FOR_NEXT_AI.md  README.md  SECURITY.md  install.sh  pyproject.toml  setup.py  uninstall.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: mindflow-engine.xml  mindflow.xml
mindflow/: __init__.py  cache.py  cli.py  config.py  constants.py  engine.py  gemini_client.py  predictor.py  stats.py
mindflow/providers/: __init__.py  base.py  gemini.py  local.py
tests/: integration_test.py  test_cache.py  test_cli.py  test_config.py  test_deps.py  test_engine_bootstrap.py  test_gemini_client.py  test_local_provider.py  test_predictor.py  test_providers.py  test_stats.py
