[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindflow"
version = "0.2.0"
description = "System-wide AI-powered text autocomplete for Linux, powered by Google Gemini"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Seemoo" }]
keywords = ["ibus", "autocomplete", "gemini", "ai", "linux", "input-method"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Editors :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "google-genai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/simoabid/MindFlow"
Repository = "https://github.com/simoabid/MindFlow"
Issues = "https://github.com/simoabid/MindFlow/issues"
Changelog = "https://github.com/simoabid/MindFlow/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
mindflow = "mindflow.cli:main"
mindflow-engine = "mindflow.engine:main"

[tool.setuptools.packages.find]
include = ["mindflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# integration_test.py talks to the real Gemini API and is run manually.
addopts = "-ra --strict-markers"
python_files = ["test_*.py"]
markers = [
    "integration: marks tests that require a real Gemini API key (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["mindflow"]
omit = ["mindflow/engine.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
# gi.require_version() must run before importing from gi.repository,
# so these imports legitimately follow a statement.
"mindflow/engine.py" = ["E402"]
"tests/test_engine_bootstrap.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/", "build/", "venv/", ".venv/"]

[[tool.mypy.overrides]]
# The IBus engine relies on PyGObject's dynamic typing; type-checking it
# produces noise without much value.
module = "mindflow.engine"
ignore_errors = true
